--- a/_config.yml
+++ b/_config.yml
@@ -10,8 +10,8 @@ relative_permalinks: true
 title:            Hyde
 tagline:          'A Jekyll theme'
 description:      'A brazen two-column <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that pairs a prominent sidebar with uncomplicated content. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
-url:              http://fjovan.github.io/
-baseurl:          http://fjovan.github.io/
+url:              http://ferdianjovan.github.io/
+baseurl:          http://ferdianjovan.github.io/
 
 author:
   name:           'Mark Otto'
