--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ highlighter:      pygments
 
 # Permalinks
 permalink:        pretty
-relative_permalinks: true
+# relative_permalinks: true
 
 # Setup
 title:            Hyde
@@ -17,6 +17,7 @@ author:
   name:           'Mark Otto'
   url:            https://twitter.com/mdo
 
+gems:             [jekyll-paginate]
 paginate:         5
 
 # Custom vars
