--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,7 @@ author:
 
 gems:             [jekyll-paginate]
 paginate:         5
+paginate_path:    "page:num"
 
 # Custom vars
 version:          2.1.0
