--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ author:
   name:           'Mark Otto'
   url:            https://twitter.com/mdo
 
-gems:             [jekyll-paginate]
+plugins:             [jekyll-paginate]
 paginate:         5
 paginate_path:    "page:num"
 
