--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ highlighter:      pygments
 
 # Permalinks
 permalink:        pretty
-relative_permalinks: true
+relative_permalinks: false
 
 # Setup
 title:            Hyde
@@ -18,6 +18,7 @@ author:
   name:           'Mark Otto'
   url:            https://twitter.com/mdo
 
+plugins:          [jekyll-paginate, jekyll-gists]
 paginate:         5
 
 # Custom vars
